Первая тестовая версия
Главный экран с чатами.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
-DB_PASS=123456
+# Подключение к базе данных 
+DB_HOST=localhost
+DB_DATABASE=chats
+DB_USER=chats
+DB_PASS=123456 # Нужно изменить на более защищённый. Так же заменить на новый и в самой БД.
+DB_CHARSET=utf8mb4
+
+# Telegram бот
+BOT_TOKEN=
+BOT_WEBHOOK=
